--- a/service-etudiant/pom.xml
+++ b/service-etudiant/pom.xml
@@ -14,6 +14,8 @@
     <name>service-etudiant</name>
     <description>Demo project for Spring Boot</description>
 
+    <packaging>jar</packaging>
+
     <properties>
         <java.version>1.8</java.version>
         <spring-cloud.version>2020.0.0</spring-cloud.version>
@@ -96,6 +98,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+
                 <configuration>
                     <excludes>
                         <exclude>
